...
                if (selectedTopicsList.isEmpty()) {
                    coroutineScope.launch { snackbarHostState.showSnackbar("Debes seleccionar al menos un tema.") }
                } else {
                    navigateToQuestions(selectedTopicsList, selectedDifficulty, selectedLanguage)
                }
            }) {
            Text("Start")
        }
    }
}

@Composable
fun FilterChip(
...
